[build-system]
requires = ["uv_build>=0.11.30,<0.12"]
build-backend = "uv_build"

[project]
name = "cdtb"
version = "1.3.0"
authors = [
    { name="CDragon team" },
]
description = "A toolbox to work with League of Legends game files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "hachoir",
  "xxhash",
  "pyzstd",
  "Pillow",
  "ujson",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

[project.urls]
Homepage = "https://communitydragon.org"
Repository = "https://github.com/CommunityDragon/CDTB"

[project.scripts]
cdtb = "cdtb.__main__:main"

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
]

[tool.uv.build-backend]
module-name = "cdtb"
module-root = ""

[tool.ruff.lint]
ignore = ["E741"]
